--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <main>
         <div id="typingWrapper">
-            <div id="typeHere" tabindex="0"></div>
+            <div id="typeHere" tabindex="0"></div> <!-- tabindex to focus on div -->
+            <button id="startTyping">Start Typing</button>
         </div>
     </main>
     <script src="resources/typer.js"></script>
